feat: Complete SpatiBot project setup with Docker containerization
- Add comprehensive Dockerfile with ROS2 Humble and all dependencies
- Configure docker-compose.yml with host networking and device passthrough
- Create helper scripts (ros.sh, dev-shell.sh, source-ros.sh) for development
- Add SpatiBot packages: spatibot_gui, spatibot_oakd, spatibot_interfaces
- Include robot remote control webserver with FastAPI
- Add CycloneDDS configuration for ROS2 communication
- Update .gitignore to exclude build artifacts (install/, log/, build/)
- Fix set_velocity function mapping in robot API node
- Add comprehensive README with setup and usage instructions
- Configure X11 forwarding and USB device access for OAK-D camera

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,22 @@
 version: '3.9'
 services:
   app:
-    build: .
+    build:
+      context: .
+      network: host
+    network_mode: host
     container_name: test4-dev
     working_dir: /workspace
     command: tail -f /dev/null
     volumes:
       - ./:/workspace
+      - /tmp/.X11-unix:/tmp/.X11-unix:rw
+    environment:
+      - ROS_DISTRO=humble
+      - RMW_IMPLEMENTATION=rmw_cyclonedds_cpp
+      - DISPLAY=${DISPLAY}
+    devices:
+      - /dev/bus/usb:/dev/bus/usb
     ports:
       - "8080:8080"
     dns:
